[package]
name = "easy-qjs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.6.0"
async-trait = "0.1.62"
chrono = { version = "0.4.23", features = ["serde"] }
flume = "0.10.14"
js = { version = "0.1.7", package = "rquickjs", features = ["tokio", "full", "futures", "parallel"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
snafu = { version = "0.7.4", features = ["rust_1_61"] }
tokio = { version = "1.24.1", features = ["rt", "rt-multi-thread", "macros", "sync"] }
tracing = "0.1.37"

[dev-dependencies]
anyhow = "1.0.68"
