[package]
name = "easy-qjs"
version = "0.1.1"
edition = "2021"

[features]
default = ["console"]
console = ["atty"]

[dependencies]
async-trait = "0.1.62"
atty = { version = "0.2.14", optional = true }
flume = "0.10.14"
itertools = "0.10.5"
js = { version = "0.1.7", package = "rquickjs", features = ["tokio", "full", "futures", "parallel"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
snafu = { version = "0.7.4", features = ["rust_1_61"] }
tokio = { version = "1.24.1", features = ["rt", "rt-multi-thread", "macros", "sync"] }
tracing = "0.1.37"

[dev-dependencies]
anyhow = "1.0.68"
tracing-subscriber = "0.3.16"
