[package]
name = "easy-qjs"
version = "0.1.4"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/easy-qjs"
repository = "https://github.com/tyrchen/easy-qjs"
homepage = "https://github.com/tyrchen/easy-qjs"
description = """
A simple library to embed quickjs into your rust project.
"""
readme = "README.md"
categories = ["development-tools"]
keywords = ["quickjs"]

[features]
default = ["console", "fetch"]
builtin_processor = []
console = ["atty"]
fetch = ["reqwest"]
dispatcher = ["flume"]

[dependencies]
anyhow = "1.0.68"
async-trait = "0.1.62"
atty = { version = "0.2.14", optional = true }
flume = { version = "0.10.14", optional = true }
itertools = "0.10.5"
js = { version = "0.1.7", package = "rquickjs", features = ["tokio", "full", "futures", "parallel"] }
reqwest = { version = "0.11.14", default-features = false, features = ["rustls-tls", "gzip", "deflate", "serde_json", "mime_guess", "brotli", "json"], optional = true }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
snafu = { version = "0.7.4", features = ["rust_1_61"] }
tokio = { version = "1.24.1", features = ["rt", "rt-multi-thread", "macros", "sync"] }
tracing = "0.1.37"

[dev-dependencies]
anyhow = "1.0.68"
tracing-subscriber = "0.3.16"
